--- a/dubbo-client/src/main/java/config.properties
+++ b/dubbo-client/src/main/java/config.properties
@@ -1,1 +1,1 @@
-dubbo.registry=zookeeper://zk1.dt.com:2181?backup=zk2.dt.com:2181,zk3.dt.com:2181
+dubbo.registry=zookeeper://zk1.bx.com:2181?backup=zk2.bx.com:2181,zk3.bx.com:2181
